# IKnowYou

./: .gitignore  Makefile  README.md  docker-compose.yml  tsconfig.json  tsconfig.tsbuildinfo
app/: globals.css  layout.tsx  (+1 more)
backend/: .dockerignore  .env.example  Dockerfile  main.py  migrate_persons.py  pyproject.toml  pytest_out.txt  reindex_memories.py  requirements.txt  reset_chroma.py  test_search.py  tests_assertion_error.txt  tests_failed.txt  tests_failed_v2.txt  tmp_check.py  tmp_check_pydantic.py  tmp_cleanup.py  tmp_debug.py  tmp_debug.txt  tmp_debug_post.py
backend/app/: config.py  main.py
backend/app/api/routes/: memories.py  people.py  search.py
backend/app/database/: neo4j_client.py  sqlite_client.py  vector_store.py
backend/app/models/: memory.py  person.py  relationship.py
backend/app/services/: memory_service.py
backend/app/services/cultural/: indian_resolver.py
backend/app/services/encryption/: aes_gcm.py
backend/app/utils/: embeddings.py
backend/db/: neo4j_client.py  sqlite_client.py
backend/ml/relation_maps/: hindi.json  resolver.py  tamil.json
backend/models/: memory.py  person.py  relationship.py
backend/routes/: confirmations.py  corrections.py  graph.py  memory.py  persons.py  relationships.py
backend/services/: conflict_detector.py  llm_client.py  llm_extraction.py  relation_resolver.py  vector_store.py
backend/tests/: test_api.py  test_conflict_and_correction.py  test_cultural_resolver.py  test_extraction.py  test_memory_service.py  test_phase2.py  test_relation_resolver.py
backend/tools/: debug_cursor_dns.py
(+55 files in other folders)
