[project]
name = "iknow-you-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "neo4j>=5.19.0",
    "sqlite-vss>=0.1.2",
    "sentence-transformers>=2.7.0",
    "spacy>=3.7.0",
    "openai-whisper>=20231117",
    "cryptography>=42.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-multipart>=0.0.9",
    "aiofiles>=23.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]
